// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton component should render radio button correctly 1`] = `
<TouchableWithoutFeedback
  color="primary"
  disabled={false}
  onPress={[Function]}
  size={20}
  testID="radio-button"
>
  <View
    color="primary"
    disabled={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#777777",
          "borderRadius": 12,
          "borderWidth": 2,
          "height": 20,
          "justifyContent": "center",
          "width": 20,
        },
      ]
    }
    testID="radio-button-circle"
  />
</TouchableWithoutFeedback>
`;

exports[`RadioButton component should render radio button selected but disabled correctly 1`] = `
<TouchableWithoutFeedback
  color="primary"
  disabled={true}
  onPress={[Function]}
  size={20}
  testID="radio-button"
>
  <View
    color="primary"
    disabled={true}
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#bbbbbb",
          "borderRadius": 12,
          "borderWidth": 2,
          "height": 20,
          "justifyContent": "center",
          "width": 20,
        },
      ]
    }
    testID="radio-button-circle"
  />
</TouchableWithoutFeedback>
`;

exports[`RadioButton component should render radio button selected but disabled with label correctly 1`] = `
<TouchableOpacity
  activeOpacity={1}
  disabled={true}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
  testID="radio-button-label"
>
  <TouchableWithoutFeedback
    color="primary"
    disabled={true}
    onPress={[Function]}
    size={20}
    testID="radio-button"
  >
    <View
      color="primary"
      disabled={true}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#bbbbbb",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          },
        ]
      }
      testID="radio-button-circle"
    />
  </TouchableWithoutFeedback>
  <Text
    disabled={true}
    style={
      Array [
        Object {
          "color": "#bbbbbb",
          "fontSize": 14,
          "letterSpacing": 0.22,
          "marginLeft": 8,
        },
      ]
    }
  >
    My Label
  </Text>
</TouchableOpacity>
`;

exports[`RadioButton component should render radio button selected correctly 1`] = `
<TouchableWithoutFeedback
  color="primary"
  disabled={false}
  onPress={[Function]}
  size={20}
  testID="radio-button"
>
  <View
    color="primary"
    disabled={false}
    selected={true}
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#f4ab34",
          "borderRadius": 12,
          "borderWidth": 2,
          "height": 20,
          "justifyContent": "center",
          "width": 20,
        },
      ]
    }
    testID="radio-button-circle"
  >
    <View
      color="primary"
      disabled={false}
      selected={true}
      style={
        Array [
          Object {
            "backgroundColor": "#f4ab34",
            "borderRadius": 12,
            "height": 10,
            "width": 10,
          },
        ]
      }
    />
  </View>
</TouchableWithoutFeedback>
`;

exports[`RadioButton component should render radio button with label correctly 1`] = `
<TouchableOpacity
  activeOpacity={1}
  disabled={false}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
  testID="radio-button-label"
>
  <TouchableWithoutFeedback
    color="primary"
    disabled={false}
    onPress={[Function]}
    size={20}
    testID="radio-button"
  >
    <View
      color="primary"
      disabled={false}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#777777",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          },
        ]
      }
      testID="radio-button-circle"
    />
  </TouchableWithoutFeedback>
  <Text
    disabled={false}
    style={
      Array [
        Object {
          "color": "#333333",
          "fontSize": 14,
          "letterSpacing": 0.22,
          "marginLeft": 8,
        },
      ]
    }
  >
    My Label
  </Text>
</TouchableOpacity>
`;
